# Lenz-Wallpaper

./: CMakeLists.txt  premake.py  run.sh
include/: x11_wrapper.h
src/: main.cpp
